# atlashdf

./: .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  HDF4Water-Tutorial-WIP.ipynb  HDF4Water-Tutorial.ipynb  LICENSE  Makefile  README.md
atlashdf/: Makefile  README.md  argparse.hpp  atlashdftools.cpp  atlashdftools.h  main.cpp  osm_filter.hpp  osm_immediate.cpp  osm_immediate.h  osm_resolvegeom.cpp  osm_resolvegeom.h  osmpbfreader.h  polygonize.hpp  triangulation.hpp
atlashdf-rs/: Cargo.toml  dataloader.py  pyproject.toml  test.py
atlashdf-rs/examples/: mask.rs
atlashdf-rs/src/: lib.rs  main.rs  mask.rs  py.rs
atlashdf/simplifypolygon/: Makefile  main.cpp
atlashdf/triangle_check/: triangle_check.py  triangle_warn.py
atlashdf_implementation/: README.md
atlashdf_implementation/helena/: .gitignore  Makefile  README.md  atlashdftools.h  main.cpp  osm2atlas.cpp  osm_immediate.cpp  osm_immediate.h  osm_resolvegeom.cpp  osm_resolvegeom.h
atlashdf_implementation/osmlulc/: 00_combine_fs.py  README.md  (+18 more)
ci/: daily.sh  runme.sh
egl/: .gitignore  Makefile  README.md  main.cpp  mask_renderer.cpp  mask_renderer.hpp  prepare_ogl.cpp  prepare_ogl.h  tictoc.hpp
examples/: streets_sequential.py  torchgeo_datamodule.py  water_filter.py  water_mask.py
python_module/: .gitignore  Dockerfile  Makefile  README.md  setup.py  test.py  water-berlin.py  water-guinea-test.py  water-oberbayern.py
specification/: README.md
tests/: test_linestrings.py  test_python.py  test_triangles.py
viewer/: Makefile  README.md  datasystem.cpp  datasystem.h  test.sh  viewer.cpp
(+18 files in other folders)
