[package]
name = "atlashdf-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "atlashdf_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.18.1", features = ["extension-module"] }
numpy = "0.18.0"
ndarray = "0.15.6"

euc = "0.5.3"
georaster = { git = "https://github.com/pka/georaster.git" }
hdf5 = "0.8.1"
image = "0.24.5"
minifb = "0.23.0"
proj = { version = "0.27.0", features = ["bundled_proj"] }
